[package]
name       = "ibc"
version    = "0.6.1"
edition    = "2018"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository = "https://github.com/informalsystems/ibc-rs"
authors    = ["Informal Systems <hello@informal.systems>"]

description = """
    Implementation of the Inter-Blockchain Communication Protocol (IBC).
    This crate comprises the main data structures and on-chain logic.
"""

[features]
# This feature grants access to development-time mocking libraries, such as `MockContext` or `MockHeader`.
# Depends on the `testgen` suite for generating Tendermint light blocks.
default = ["std", "eyre_tracer"]
std = [
    "flex-error/std",
    "chrono/std",
    "serde_json/std",
    "serde/std",
    "tracing/std",
    "prost/std",
    "prost-types/std",
    "bytes/std",
    "regex/std",
    "subtle-encoding/std",
    "sha2/std",
    "ics23/std",
]
eyre_tracer = ["flex-error/eyre_tracer"]
mocks = [ "tendermint-testgen", "sha2" ]

[dependencies]
# Proto definitions for all IBC-related interfaces, e.g., connections or channels.
ibc-proto = { version = "0.9.0", path = "../proto" }
#ics23 = "0.6.5"
ics23 = { version = "0.6.5", default-features = false, git = "https://github.com/confio/ics23.git", branch = "master" }
chrono = { version = "0.4.19", default-features = false, features = ["serde", "clock"] }
serde_derive = "1.0.104"
serde = { version = "1.0.125", default-features = false, features = ["derive"]  }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
tracing = { version = "0.1.26", default-features = false }
prost = { version = "0.7", default-features = false, features = ["prost-derive"] }
prost-types = { version = "0.7", default-features = false }
bytes = { version = "1.0.0", default-features = false }
dyn-clonable = "0.9.0"
regex = { version = "1", default-features = false }
subtle-encoding = { version = "0.5", default-features = false, features = ["bech32-preview"] }
sha2 = { version = "0.9.3", optional = true, default-features = false }
flex-error = { version = "0.4.1", default-features = false }

[dependencies.tendermint]
version = "=0.21.0"

[dependencies.tendermint-proto]
version = "=0.21.0"

[dependencies.tendermint-testgen]
version = "=0.21.0"
optional = true

[dev-dependencies]
env_logger = "0.9.0"
tracing-subscriber = "0.2.19"
test-env-log = { version = "0.2.7", features = ["trace"] }
modelator = { git = "https://github.com/informalsystems/modelator", rev = "99f656fa8b3cf46a2aa0b6513e4e140d1778c4bd" }
tendermint-rpc = { version = "=0.21.0", features = ["http-client", "websocket-client"] }
tendermint-testgen = { version = "=0.21.0" } # Needed for generating (synthetic) light blocks.
sha2 = { version = "0.9.3" }

[[test]]
name = "mbt"
path = "tests/mbt.rs"
required-features = ["mocks"]
